UserController methods done by TDD

--- a/sistema-imobiliario/.classpath
+++ b/sistema-imobiliario/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ED/PIES1/sistema-imobiliario/postgresql-42.5.0.jar">
+	<classpathentry kind="lib" path="E:/Usuários/Lucas Bertoldo/Desktop/ES 2022.2/PIES1/PIES1/sistema-imobiliario/postgresql-42.5.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
